fix: resolve linting issues in NoteManager and ChecklistPanel (#12)